<resources>
    <string name="app_name">PIP</string>
    <string name="pip">Pérdida Insensible Pediatría</string>

    <string name="button_calculate">Calcular</string>
    <string name="about">Acerca de</string>

    <!-- Textos-->
    <string name="turn">Turno</string>
    <string name="weight">Peso</string>
    <string name="time_fever">Fiebre</string>

    <string name="kgs">Kgs</string>
    <string name="hrs">Hrs</string>

    <string name="result">resultado</string>

    <!-- Autores-->
    <string name="develop">Desarrollado por:</string>
    <string name="xizuth">Alejandro Leyva</string>
    <string name="gus">Gustavo Maravilla</string>

    <string name="lic">Enfermero y Asesor\nuiabiblioteca@outlook.com</string>
    <string name="dev">Programador\njalm_x@hotmail.com</string>

    <string name="information">Disfruta la app</string>

    <!-- list-->
    <string-array name="turns">
        <item> 8 </item>
        <item> 12 </item>
        <item>Otro</item>
    </string-array>

</resources>
